# GP2018-Assignments

./: .gitmodules  README.md
assignment1/: .gitignore  CMakeLists.txt  README.md
assignment1/src/: gui_utils.cpp  gui_utils.h  main.cpp
assignment2/: README.md
assignment2/src/: main.cpp
assignment3/: CMakeLists.txt  README.md
assignment3/src/: main.cpp
assignment4/: CMakeLists.txt  README.md
assignment4/src/: main.cpp
assignment5/: CMakeLists.txt  README.md
assignment5/src/: gui_utils.cpp  main.cpp  test_rosenbrock.cpp
assignment5/src/femLib/: Element.h  FEMElement.h  FEMElementAnalytic.h  FEMElementAutoDiff.h  FEMElementFD.h  FixedPointElement.h  SimulationMesh.cpp  SimulationMesh.h  Spring.h  TotalEnergyFunction.cpp  TotalEnergyFunction.h
assignment5/src/optLib/: GradientDescentFunctionMinimizer.h  MathHelper.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  (+1 more)
assignment6/: CMakeLists.txt  README.md
assignment6/cmake/: FindOOQP.cmake
assignment6/src/: gui_utils.h  main.cpp  test_SQP.cpp
assignment6/src/femLib/: CMakeLists.txt  FEMElement.h  FEMElementAnalytic.h  FEMElementAutoDiff.h  FEMElementFD.h  FixedPointElement.h  SimulationMesh.cpp  SimulationMesh.h  Spring.h  TotalEnergyFunction.cpp  TotalEnergyFunction.h
assignment6/src/optLib/: CMakeLists.txt  FunctionConstraints.h  GradientDescentFunctionMinimizer.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  OoqpEigenInterface.cpp  OoqpEigenInterface.h  RosenbrockFunction.h  SQPFunctionMinimizer.cpp  SQPFunctionMinimizer.h  ooqpei_assert_macros.h  ooqpei_numerical_comparisons.h
